about to rework the client entirely

--- a/cs16-webrtc/services/web-relay/src/client/index.html
+++ b/cs16-webrtc/services/web-relay/src/client/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/assets/favicon-DRK6xunG.png" type="image/png">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Loading</title>
+    <title>CS1.6 WebRTC Client</title>
 
     <style>
         body {
@@ -89,10 +89,9 @@
             transition: opacity ease-in-out 0.5s;
         }
     </style>
-  <script type="module" crossorigin src="/assets/main-CqZe0kYo.js"></script>
 </head>
 <body>
-<img id="logo" alt="Logo" class="notDraggable" src="/assets/logo-DTTQpMBv.png"/>
+<img id="logo" alt="CS1.6 Logo" class="notDraggable" src="/logo.png"/>
 <canvas id="canvas">
 </canvas>
 <form id="form">
@@ -105,5 +104,6 @@
     </button>
 </form>
 <p id="warning" class="notDraggable">If it's not starting, try to enable microphone and refresh</p>
+<script type="module" src="/main.ts"></script>
 </body>
 </html>
