no real progress yet

--- a/cs16-webrtc/services/web-relay/src/client/index.html
+++ b/cs16-webrtc/services/web-relay/src/client/index.html
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="module" src="/main.ts"></script>
 
-    <title>CS1.6 WebRTC Client</title>
+    <title>Loading</title>
 
     <style>
         body {
@@ -91,7 +92,7 @@
     </style>
 </head>
 <body>
-<img id="logo" alt="CS1.6 Logo" class="notDraggable" src="/logo.png"/>
+<img id="logo" alt="Logo" class="notDraggable" src="logo.png"/>
 <canvas id="canvas">
 </canvas>
 <form id="form">
@@ -104,6 +105,5 @@
     </button>
 </form>
 <p id="warning" class="notDraggable">If it's not starting, try to enable microphone and refresh</p>
-<script type="module" src="/main.ts"></script>
 </body>
 </html>
