--- a/web-server/go-webrtc-server/client/index.html
+++ b/web-server/go-webrtc-server/client/index.html
@@ -100,6 +100,7 @@
         console.log('[FIX] Runtime initialized with 512MB memory, growth disabled');
       }
     };
+    console.log("🧪 TEST: Volume mount working - file served from host");
   </script>
   <script type="module" crossorigin src="/assets/main-CqZe0kYo.js"></script>
 </head>
@@ -117,6 +118,5 @@
     </button>
 </form>
 <p id="warning" class="notDraggable">If it's not starting, try to enable microphone and refresh</p>
-
 </body>
-</html>
+</html>console.log("🧪 TEST: Volume mount working - file served from host");
