pass cs server port through xash engine so go server knows which to connect to, so 27015 becomes 8015 for webrtc, and then back to 27015 for cs server, to avoid port conflicts locally

--- a/web-server/go-webrtc-server/dashboard.html
+++ b/web-server/go-webrtc-server/dashboard.html
@@ -501,8 +501,8 @@
             clickedElement.classList.add('connecting');
             
             try {
-                // Open Xash client with server selection (clean port-only URL)
-                const clientUrl = `/client?server=${serverInfo.port}`;
+                // Use dashboard port with server parameter (correct approach)
+                const clientUrl = `http://127.0.0.1:8080/client?server=${serverInfo.port}`;
                 window.open(clientUrl, '_blank');
                 
                 // Update UI to show connecting state
